--- a/Productos/nbproject/private/private.properties
+++ b/Productos/nbproject/private/private.properties
@@ -1,7 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\ACER01\\AppData\\Roaming\\NetBeans\\8.2rc\\config\\GlassFishEE6\\Properties\\gfv3-389055256.properties
+deploy.ant.properties.file=C:\\Users\\pc\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-560613299.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/ACER01/AppData/Roaming/NetBeans/8.2rc/config/GF_4.1.1/domain1
-j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
-j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
-user.properties.file=C:\\Users\\ACER01\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
+j2ee.server.domain=C:/Jee/glassfish/domains/domain1
+j2ee.server.home=C:/Jee/glassfish
+j2ee.server.instance=[C:\\Jee\\glassfish;C:\\Jee\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Jee
+selected.browser=Chrome.INTEGRATED
+user.properties.file=C:\\Users\\pc\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
